# EPOMAKER-Ajazz-AK820-Pro

./: Cargo.toml  README.md  ak820-lcd.service
src/: device.rs  hidraw.rs  lcd.rs  lib.rs  main.rs  protocol.rs  stats.rs  usb.rs
src/gui/: actions.rs  app.rs  main.rs  state.rs  widgets.rs
